<?xml version="1.0"?>

<!--
  ~ Copyright (c) 2010, The Regents of the University of California, through Lawrence Berkeley
  ~ National Laboratory (subject to receipt of any required approvals from the U.S. Dept. of Energy).
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification, are permitted provided
  ~ that the following conditions are met:
  ~
  ~ (1) Redistributions of source code must retain the above copyright notice, this list of conditions and the
  ~ following disclaimer.
  ~
  ~ (2) Redistributions in binary form must reproduce the above copyright notice, this list of conditions
  ~ and the following disclaimer in the documentation and/or other materials provided with the distribution.
  ~
  ~ (3) Neither the name of the University of California, Lawrence Berkeley National Laboratory, U.S. Dept.
  ~ of Energy, nor the names of its contributors may be used to endorse or promote products derived from
  ~ this software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
  ~ "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
  ~ TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A
  ~ PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
  ~ OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
  ~ SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED
  ~ TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
  ~ PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
  ~ LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
  ~ NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  ~ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  ~
  ~ You are under no obligation whatsoever to provide any bug fixes, patches, or upgrades to the
  ~ features, functionality or performance of the source code ("Enhancements") to anyone; however,
  ~ if you choose to make your Enhancements available either publicly, or directly to Lawrence Berkeley
  ~ National Laboratory, without imposing a separate written license agreement for such Enhancements,
  ~ then you hereby grant the following license: a  non-exclusive, royalty-free perpetual license to install,
  ~ use, modify, prepare derivative works, incorporate into other computer software, distribute, and
  ~ sublicense such enhancements or derivative works thereof, in binary and source code form.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>gov.jgi.gentech</groupId>
    <artifactId>biopig-core</artifactId>
    <packaging>jar</packaging>
    <version>0.2.0</version>
    <name>biopig-core</name>
    <description>apache pig extensions to support biological sequence data analysis</description>
    <url></url>
    <organization>
        <name>Joint Genomics Institute, US Department of Energy</name>
        <url>http://www.jgi.gov</url>
    </organization>
    <parent>
        <groupId>gov.jgi.gentech</groupId>
        <artifactId>biopig</artifactId>
        <version>0.2.0</version>
    </parent>
    <dependencies>
	<dependency>
	    <groupId>org.apache</groupId>
	    <artifactId>pig</artifactId>
	    <version>0.8.0</version>
	</dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.12</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.mahout.hadoop</groupId>
            <artifactId>hadoop-core</artifactId>
            <version>0.20.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-tools</artifactId>
            <version>0.20.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-test</artifactId>
            <version>0.20.2</version>
        </dependency>
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>com.google.collections</groupId>
            <artifactId>google-collections</artifactId>
            <version>1.0</version>
        </dependency>

        <dependency>
            <groupId>commons-httpclient</groupId>
            <artifactId>commons-httpclient</artifactId>
            <version>3.1</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.5.11</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.5.11</version>
        </dependency>
        <dependency>
            <groupId>apache-cassandra</groupId>
            <artifactId>apache-cassandra</artifactId>
            <version>0.6.1</version>
        </dependency>
        <dependency>
            <groupId>thrift</groupId>
            <artifactId>libthrift</artifactId>
            <version>0.6.0</version>
        </dependency>
        <dependency>
            <groupId>net.sf.json-lib</groupId>
            <artifactId>json-lib</artifactId>
            <version>2.3</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>1.8.5</version>
        </dependency>
        <dependency>
            <groupId>org.biojava</groupId>
            <artifactId>biojava</artifactId>
            <version>UNKNOWN</version>
        </dependency>
    </dependencies>
    <build>

        <plugins>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptors>
                        <descriptor>src/main/assembly/job.xml</descriptor>
                        <descriptor>src/main/assembly/bin.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <!-- this is used for inheritance merges -->
                        <phase>package</phase>
                        <!-- append to the packaging phase. -->
                        <goals>
                            <goal>single</goal>
                            <!-- goals == mojos -->
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.6.1</version>
                <configuration>

                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId> 
                <configuration>
                    <argLine>-Xmx1050m -XX:MaxPermSize=128M</argLine>
                </configuration>
            </plugin>
           
        </plugins>
    </build>
</project>
